
ChangeLog
 [ + added, - removed, * changed ]
 * 21Oct2015 Fixed visibility of the on-line API routines that are called from the wrappers
             Fix example installation. Use cp instead of ln -s.
             Fix Java compilation in other place rather than extract dir
             Fix configured.sh when building in a directory other than extraction dir
 * 15Oct2015 Code adapted to use Synapse libraries v2.0 instead of the older version libMRNetApp
 * 13Oct2015 Fix parametrization of clCreateKernelsInProgram
 * 05Oct2015 Adding support for MPI3 immediate collectives
             Revamping source code structure, each wrapper generates its
               intermediate lib_wrap_*
             Removed support for TRT, UPC(unfinished), PACX, CELL
 * 16Sep2015 Fixed configure check to look for MPI Fortran libraries named like "libmpifort"
 * 05Aug2015 papi_best_set now checks whether counters and created eventsets
               are 0 or not
 + 20Jul2015 Support for minimum number of cycles of reference in PEBS
 * 16Jul2015 Fix missing pthread_mutex_unlock in persistent request
 + 08Jul2015 Imported first bits for sionlib
 * 25Jun2015 Fix crash when temporal dir != final dir and their shared
               characteristics differ.
             Fix compilation into a separate directory.
             Fix installation from a separate building directory.
 * 23Jun2015 Add initial PEBS sampling support
             Split sampling files into src/tracer/sampling
 * 17Jun2015 Fix extrae command line, lack of thread init
 * 12Jun2015 Do not invoke MPI_* routines when initializing Extrae but MPI
             is not present (as in MPI+OmpSs).
 * 04Jun2015 Sanitized environment variables, in particular LD_LIBRARY_PATH
             Added extrae-test-dyninst tool to check DynInst functionality
             Annotate the node name in the .mpit file to avoid file collisions
             Extend Java documentation
 * 25May2015 Extrae 3.1.0 released